--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0+3
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -39,6 +39,7 @@ dependencies:
   delayed_display: ^2.0.0
   google_mobile_ads: ^2.3.0
   url_launcher: ^6.0.20
+  shared_preferences: ^2.0.17
 
 
 dev_dependencies:
